--- a/.twmrc
+++ b/.twmrc
@@ -5,7 +5,7 @@
 #
 # Modified (just colors and some menu options) by Istvan Keppler keppler@lajli.gau.hu
 #
-#   twm... the original and the best...
+# Modified again to make the menu more useful in post-1997 computing
 #
 
 NoGrabServer
