--- a/.twmrc
+++ b/.twmrc
@@ -5,7 +5,7 @@
 #
 # Modified (just colors and some menu options) by Istvan Keppler keppler@lajli.gau.hu
 #
-# Modified again to make the menu more useful in post-1997 computing
+# Modified again to make the menu more useful in post-1997 computing by Blaine Colwell twmrc@colwellblaine.com
 #
 
 NoGrabServer
